protodeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: protodeploy
  name: protodeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: protodeploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: protodeploy
    spec:
      containers:
      - image: koton00beng/protoapp
        name: protoapp
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m

status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: protodeploy
  name: protodeploy
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: protodeploy
status:
  loadBalancer: {}
